tests/codegen/fail/input_object/enum/derive_unique_name.rs
use juniper::GraphQLInputObject;

#[derive(GraphQLInputObject)]
enum Object {
    Test(String),
    #[graphql(name = "test")]
    Test2(String),
}

fn main() {}
